--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation">
+    android:id="@+id/navigation"
+    app:startDestination="@id/startScan">
 
+    <fragment
+        android:id="@+id/startScan"
+        android:name="com.nikita.mlkit_camera_app.start_Scan.StartScan"
+        android:label="StartScan" />
 </navigation>
