--- a/app/src/main/res/layout/activity_scan_camera.xml
+++ b/app/src/main/res/layout/activity_scan_camera.xml
@@ -10,4 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <com.nikita.mlkit_camera_app.cameraFeature.LandMarkView
+        android:id="@+id/landMarkView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
